--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 
 [lib]
 proc-macro = true
-
 [dependencies]
 buddy = {path = "../buddy"}
+proc-macro2 = "1.0.84"
+quote = "1.0.36"
+syn = {version = "2.0.66", features = ["full"]}
